booking page misalign fix

--- a/public/stylesheets/booking.css
+++ b/public/stylesheets/booking.css
@@ -43,7 +43,7 @@ p{
     font-weight: 600;
     margin-bottom: 0px;
     margin-top: 40px;
-    margin-left: 390px;
+    margin-left: 370px;
 }
 
 #p1{
